--- a/ProductPictures/ProductPictures/ProductPictures.csproj
+++ b/ProductPictures/ProductPictures/ProductPictures.csproj
@@ -32,6 +32,9 @@
     <EmbeddedResource Update="Views\ProductDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\TestPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\UserPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
